<resources>
    <string name="app_name">Подготовка к ЕГЭ</string>
    <string name="var">Варианты</string>
    <string name="tests">Темы</string>
    <string name="ege">ЕГЭ.Математика</string>
    <string name="result">Правильно сделано: </string>
    <string name="title_activity_main4">Main4act</string>
    <string name="t1">Вычисления</string>
    <string name="b1">Сохранить ответы</string>
    <string name="v2">Преобразования выражений</string>
    <string name="v3">Задачи на смекалку</string>
    <string name="v4">Простейшие текстовые задачи</string>
    <string name="v5">Анализ утверждений</string>
    <string name="v6">Числа и их свойства</string>
    <string name="t11">1. 1,4 + 1,6</string>
    //3
    <string name="t12">2. 2 + 3 · 6</string>
    //20
    <string name="t13">3. (1 + 7)· 2</string>
    //16
    <string name="t14">4. √16 + √4</string>
    //6
    <string name="t15">5. (2 + 7)²</string>
    //81
    <string name="t21">1. Найдите a из равенства F = ma, если F = 96 и m = 16 </string>
    //6
    <string name="t22">2. Найдите h из равенства P = pgh, если p = 20, g = 10, P = 2200</string>
    //11
    <string name="t23">3. Найдите площадь ромба, если d1 = 4, d2 =6</string>
    //12
    <string name="t24">4. Воспользовавшись математической записью закона Гука F=k⋅Δx, найдите жесткость пружины k, если F=20, Δx=10</string>
    //2
    <string name="t25">5. Найдите m из равенства F = ma , если F = 84 и a = 12</string>
    //7
    <string name="t31">1. Гусеница с ночи ползёт по стволу дерева. Ночью она поднимается на 4 м вверх, а днём опускается на 1,5 м вниз. К концу седьмой ночи гусеница достигла вершины дерева. Определите высоту дерева (в метрах)</string>
    //19
    <string name="t32">2. Два туриста хотят как можно быстрее одновременно добраться до станции, находящейся от них на расстоянии 30 км. У них имеется только один (одноместный!) велосипед. Скорость передвижения каждого из них составляет 5 км/ч пешком и 15 км/ч на велосипеде. За какое наименьшее время (в часах) они смогут добраться до станции? </string>
    //4
    <string name="t33">3. Бутылка и стакан уравновешиваются кувшином; бутылка уравнове­шивается стаканом и блюдцем; два кувшина уравновешиваются тремя блюдцами. Сколько потребуется стаканов, чтобы уравновесить бутылку?</string>
    //5
    <string name="t34">4. Внутри прямоугольного листа бумаги нарисован правильный пятиугольник. Через все стороны этого пятиугольника провели прямые так, что все они пересеклись внутри листа бумаги (не на краях листа). Сколько частей получится, если разрезать лист бумаги по всем проведенным прямым?</string>
    //16
    <string name="t35">5. Сколькими способами можно разместить двух мальчиков и трех девочек в ряд, чтобы мальчики и девочки в ряду чередовались?</string>
    //12
    <string name="t41">1. Площадь земель фермерского хозяйства, отведённых под посадку сельскохозяйственных культур, составляет 42 гектара и распределена между зерновыми и техническими культурами в отношении 3:4 соответственно. Сколько гектаров занимают технические культуры?</string>
    //24
    <string name="t42">2. ЕГЭ по русскому языку сдали 92% выпускников, что составляет 23 выпускника. Сколько выпускников в школе не сдали ЕГЭ по русскому языку? </string>
    //2
    <string name="t43">3. На базу завезли 120 тонн сахара, что составило треть необходимого ко­личества. Сколько тонн сахара не хватило до необходимого количества? </string>
    //240
    <string name="t44">4. Цена ноутбука с 15%-ной скидкой — 25 500 рублей. Найдите цену ноутбука без скидки (в рублях)</string>
    //30000
    <string name="t45">5. В упаковке находятся 25 пакетиков чая. За день в офисе израсходова­ли 68% содержимого пачки. Сколько пакетиков осталось на следующий день? </string>
    //8
    <string name="t51">1) На уроке рисования среди девочек самый популярный вид рисунка — натюрморт, а среди мальчиков — рисунки животных. Всего пейзажей нарисовано больше, чем натюрмортов и больше, чем рисунков животных. Выберите утверждения, которые следуют из приведённых данных.
1. Мальчики нарисовали больше пейзажей, чем натюрмортов.
2. Девочки нарисовали меньше животных, чем пейзажей.
3. Натюрмортов больше, чем пейзажей.
4. Девочки сделали больше рисунков, чем мальчики.</string>
    //12
    <string name="t52">2) Пятеро велосипедистов одновременно выехали со старта и по одному и тому же маршруту направились к финишу. Толя приехал предпоследним. Катя приехала позже Лены и Толи. Вася обогнал Лену, но его опередил Саша. Выберите утверждения, которые следуют из приведённых данных.
1. Катя приехала последней.
2. Лена заняла четвёртое место.
3. Вася обогнал Толю.
4. Саша приехал первым</string>
    //134
    <string name="t53">3) В классе учатся 27 учеников. Известно, что бо́льшая часть из них сдала пробный ЕГЭ по математике на оценку "5" и никто из учеников не получил оценку "2". Выберите утверждения, которые верны при приведенных данных.
1. Оценку "5" получили менее 14 учеников.
2. Учеников, получивших оценку "3", меньше, чем получивших оценку "2".
3. В классе больше учеников, получивших "5", чем тех, кто написал работу на "3" или "4".
4. Найдутся 10 учеников, получивших за работу одинаковые оценки</string>
    //34
    <string name="t54">4) Маша читает рэп быстрее Коли, но медленнее Ани. Саша читает не быстрее Коли. Выберите утверждения, которые верны при указанных условиях.
1. Среди указанных четырех ребят Саша читает рэп медленнее всех.
2. Коля читает медленнее Ани.
3. Саша читает быстрее Ани.
4. Маша читает быстрее Саши</string>
    //24
    <string name="t55">5) Андрей купил в магазине одежды футболку, рубашку, джинсы и сумку. Известно, что рубашка дороже футболки, джинсы дороже рубашки, а сумка стоит дешевле джинсов. Выберите утверждения, которые верны для приведенных данных.

1. Джинсы стоят дороже футболки.

2. Футболка — самая дешевая из всех вещей.

3. Среди покупок нет двух вещей с одинаковой стоимостью.

4. Джинсы — самая дорогая вещь из купленных</string>
    //14
    <string name="t61">1. Укажите сумму двух чисел, не делящихся друг на друга, наименьшее общее кратное которых равно 90, а их наибольший общий делитель равен 6</string>
    //48
    <string name="t62">2. Приведите пример двузначного числа, которое в два раза больше произведения своих цифр</string>
    //36
    <string name="t63">3. Приведите пример трёхзначного числа, которое делится на 12, но не делится ни на 24, ни на 36, и при этом произведение всех цифр делится на 81</string>
    //996
    <string name="t64">4. Найдите наименьшее пятизначное натуральное число, которое записывается с помощью цифр 7 и 6 и делится на 12</string>
    //67776
    <string name="t65">5. Укажите сумму двух натуральных чисел, наименьшее общее кратное которых равно 45, а разность квадратов равна 144</string>
    //24

    <string name="l1">Вариант 1</string>
    <string name="l2">Вариант 2</string>
    <string name="l3">Вариант 3</string>
    <string name="l4">Вариант 4</string>
    <string name="l5">Вариант 5</string>
    <string name="l6">Вариант 6</string>
</resources>
