<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.elina.a2505.Theme3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/theme2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v3"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t31"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/e1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Введите ответ"
                android:inputType="number"
                android:text="" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t32"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/e2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Введите ответ"
                android:inputType="number" />

            <TextView
                android:id="@+id/t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t33"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/e3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Введите ответ"
                android:inputType="number" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t34"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/e4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Введите ответ"
                android:inputType="number" />

            <TextView
                android:id="@+id/t5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t35"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/e5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Введите ответ"
                android:inputType="number" />

            <Button
                android:id="@+id/z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ClickButton"
                android:text="@string/b1"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
